fix player alignment

--- a/spotify/assets/debug.css
+++ b/spotify/assets/debug.css
@@ -58,7 +58,7 @@ li img,
     overflow-y: scroll;
 }
 
-.player{
+.player {
     width: 100%;
     height: 85px;
     background-color: var(--grey);
@@ -69,21 +69,21 @@ li img,
     bottom: 0;
 }
 
-.song img{
+.song img {
     width: 45px;
 }
 
-
-.track-bar .bar{
-    width: 500px;
+.track-bar .bar {
+    width: 150%;
     height: 5px;
     background-color: var(--lightgrey);
     border-radius: 5px;
     position: relative;
 }
-.track-bar .bar::after{
+
+.track-bar .bar::after {
     content: "";
-    width: 200px;
+    width: 20%;
     height: 5px;
     background-color: white;
     border-radius: 5px;
@@ -92,8 +92,8 @@ li img,
     left: 0;
 }
 
-.volume .bar{
-    width: 200px;
+.volume .bar {
+    width: 100%;
     height: 5px;
     background-color: var(--lightgrey);
     border-radius: 5px;
@@ -102,7 +102,7 @@ li img,
 
 .volume .bar::after{
     content: "";
-    width: 100px;
+    width: 80%;
     height: 5px;
     background-color: white;
     border-radius: 5px;
